dart/handlebarrz/lib/src/antlr/HandlebarsParser.dart
// Copyright 2026 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0
//
// GENERATED FILE - DO NOT EDIT
// Generated by: scripts/generate_handlebars_parser
// Source: spec/handlebars/antlr/Handlebars*.g4

// Generated from HandlebarsParser.g4 by ANTLR 4.13.2
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import "package:antlr4/antlr4.dart";

import "HandlebarsParserBaseVisitor.dart";
import "HandlebarsParserVisitor.dart";

const int RULE_root = 0;
const int RULE_program = 1;
const int RULE_statement = 2;
const int RULE_content = 3;
const int RULE_comment = 4;
const int RULE_rawBlock = 5;
const int RULE_openRawBlock = 6;
const int RULE_block = 7;
const int RULE_openBlock = 8;
const int RULE_openInverse = 9;
const int RULE_openInverseChain = 10;
const int RULE_inverseAndProgram = 11;
const int RULE_inverseChain = 12;
const int RULE_closeBlock = 13;
const int RULE_mustache = 14;
const int RULE_partial = 15;
const int RULE_partialBlock = 16;
const int RULE_openPartialBlock = 17;
const int RULE_param = 18;
const int RULE_sexpr = 19;
const int RULE_hash = 20;
const int RULE_hashSegment = 21;
const int RULE_blockParams = 22;
const int RULE_helperName = 23;
const int RULE_partialName = 24;
const int RULE_dataName = 25;
const int RULE_path = 26;
const int RULE_pathSegments = 27;

class HandlebarsParser extends Parser {
  HandlebarsParser(super.input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }
  static final checkVersion = () => RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
    _ATN.numberOfDecisions,
    (i) => DFA(_ATN.getDecisionState(i), i),
  );
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_OPEN_RAW_BLOCK = 1;
  static const int TOKEN_END_RAW_BLOCK = 2;
  static const int TOKEN_OPEN_UNESCAPED = 3;
  static const int TOKEN_OPEN_PARTIAL_BLOCK = 4;
  static const int TOKEN_OPEN_BLOCK = 5;
  static const int TOKEN_OPEN_ENDBLOCK = 6;
  static const int TOKEN_INVERSE = 7;
  static const int TOKEN_OPEN_INVERSE = 8;
  static const int TOKEN_OPEN_INVERSE_CHAIN = 9;
  static const int TOKEN_OPEN_PARTIAL = 10;
  static const int TOKEN_COMMENT = 11;
  static const int TOKEN_OPEN = 12;
  static const int TOKEN_CONTENT = 13;
  static const int TOKEN_CLOSE_RAW_BLOCK = 14;
  static const int TOKEN_CLOSE_UNESCAPED = 15;
  static const int TOKEN_CLOSE = 16;
  static const int TOKEN_OPEN_SEXPR = 17;
  static const int TOKEN_CLOSE_SEXPR = 18;
  static const int TOKEN_OPEN_BLOCK_PARAMS = 19;
  static const int TOKEN_CLOSE_BLOCK_PARAMS = 20;
  static const int TOKEN_SEP = 21;
  static const int TOKEN_EQUALS = 22;
  static const int TOKEN_STRING = 23;
  static const int TOKEN_NUMBER = 24;
  static const int TOKEN_BOOLEAN = 25;
  static const int TOKEN_UNDEFINED = 26;
  static const int TOKEN_NULL_LIT = 27;
  static const int TOKEN_DATA = 28;
  static const int TOKEN_ID = 29;
  static const int TOKEN_WS = 30;
  static const int TOKEN_ESC_VAR = 31;

  @override
  final List<String> ruleNames = [
    "root",
    "program",
    "statement",
    "content",
    "comment",
    "rawBlock",
    "openRawBlock",
    "block",
    "openBlock",
    "openInverse",
    "openInverseChain",
    "inverseAndProgram",
    "inverseChain",
    "closeBlock",
    "mustache",
    "partial",
    "partialBlock",
    "openPartialBlock",
    "param",
    "sexpr",
    "hash",
    "hashSegment",
    "blockParams",
    "helperName",
    "partialName",
    "dataName",
    "path",
    "pathSegments",
  ];

  static final List<String?> _LITERAL_NAMES = [
    null,
    "'{{{{'",
    "'{{{{/'",
    "'{{{'",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "'}}}}'",
    null,
    null,
    "'('",
    "')'",
    null,
    "'|'",
    null,
    "'='",
    null,
    null,
    null,
    "'undefined'",
    "'null'",
    "'@'",
    null,
    null,
    r"'\{{'",
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
    null,
    "OPEN_RAW_BLOCK",
    "END_RAW_BLOCK",
    "OPEN_UNESCAPED",
    "OPEN_PARTIAL_BLOCK",
    "OPEN_BLOCK",
    "OPEN_ENDBLOCK",
    "INVERSE",
    "OPEN_INVERSE",
    "OPEN_INVERSE_CHAIN",
    "OPEN_PARTIAL",
    "COMMENT",
    "OPEN",
    "CONTENT",
    "CLOSE_RAW_BLOCK",
    "CLOSE_UNESCAPED",
    "CLOSE",
    "OPEN_SEXPR",
    "CLOSE_SEXPR",
    "OPEN_BLOCK_PARAMS",
    "CLOSE_BLOCK_PARAMS",
    "SEP",
    "EQUALS",
    "STRING",
    "NUMBER",
    "BOOLEAN",
    "UNDEFINED",
    "NULL_LIT",
    "DATA",
    "ID",
    "WS",
    "ESC_VAR",
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary => VOCABULARY;

  @override
  String get grammarFileName => "HandlebarsParser.g4";

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() => _ATN;

  RootContext root() {
    final dynamic localctx = RootContext(context, state);
    enterRule(localctx, 0, RULE_root);
    try {
      enterOuterAlt(localctx, 1);
      state = 56;
      program();
      state = 57;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  ProgramContext program() {
    final dynamic localctx = ProgramContext(context, state);
    enterRule(localctx, 2, RULE_program);
    int la;
    try {
      enterOuterAlt(localctx, 1);
      state = 62;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      while ((la & ~0x3f) == 0 && ((1 << la) & 15674) != 0) {
        state = 59;
        statement();
        state = 64;
        errorHandler.sync(this);
        la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  StatementContext statement() {
    final dynamic localctx = StatementContext(context, state);
    enterRule(localctx, 4, RULE_statement);
    try {
      state = 72;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
        case TOKEN_OPEN_UNESCAPED:
        case TOKEN_OPEN:
          enterOuterAlt(localctx, 1);
          state = 65;
          mustache();
        case TOKEN_OPEN_BLOCK:
        case TOKEN_OPEN_INVERSE:
          enterOuterAlt(localctx, 2);
          state = 66;
          block();
        case TOKEN_OPEN_RAW_BLOCK:
          enterOuterAlt(localctx, 3);
          state = 67;
          rawBlock();
        case TOKEN_OPEN_PARTIAL:
          enterOuterAlt(localctx, 4);
          state = 68;
          partial();
        case TOKEN_OPEN_PARTIAL_BLOCK:
          enterOuterAlt(localctx, 5);
          state = 69;
          partialBlock();
        case TOKEN_CONTENT:
          enterOuterAlt(localctx, 6);
          state = 70;
          content();
        case TOKEN_COMMENT:
          enterOuterAlt(localctx, 7);
          state = 71;
          comment();
        default:
          throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  ContentContext content() {
    final dynamic localctx = ContentContext(context, state);
    enterRule(localctx, 6, RULE_content);
    try {
      enterOuterAlt(localctx, 1);
      state = 74;
      match(TOKEN_CONTENT);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  CommentContext comment() {
    final dynamic localctx = CommentContext(context, state);
    enterRule(localctx, 8, RULE_comment);
    try {
      enterOuterAlt(localctx, 1);
      state = 76;
      match(TOKEN_COMMENT);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  RawBlockContext rawBlock() {
    final dynamic localctx = RawBlockContext(context, state);
    enterRule(localctx, 10, RULE_rawBlock);
    try {
      enterOuterAlt(localctx, 1);
      state = 78;
      openRawBlock();
      state = 79;
      program();
      state = 80;
      match(TOKEN_END_RAW_BLOCK);
      state = 81;
      helperName();
      state = 82;
      match(TOKEN_CLOSE_RAW_BLOCK);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  OpenRawBlockContext openRawBlock() {
    final dynamic localctx = OpenRawBlockContext(context, state);
    enterRule(localctx, 12, RULE_openRawBlock);
    int la;
    try {
      int alt;
      enterOuterAlt(localctx, 1);
      state = 84;
      match(TOKEN_OPEN_RAW_BLOCK);
      state = 85;
      helperName();
      state = 89;
      errorHandler.sync(this);
      alt = interpreter!.adaptivePredict(tokenStream, 2, context);
      while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
        if (alt == 1) {
          state = 86;
          param();
        }
        state = 91;
        errorHandler.sync(this);
        alt = interpreter!.adaptivePredict(tokenStream, 2, context);
      }
      state = 93;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_ID) {
        state = 92;
        hash();
      }

      state = 95;
      match(TOKEN_CLOSE_RAW_BLOCK);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  BlockContext block() {
    final dynamic localctx = BlockContext(context, state);
    enterRule(localctx, 14, RULE_block);
    int la;
    try {
      state = 111;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
        case TOKEN_OPEN_BLOCK:
          enterOuterAlt(localctx, 1);
          state = 97;
          openBlock();
          state = 98;
          program();
          state = 100;
          errorHandler.sync(this);
          la = tokenStream.LA(1)!;
          if (la == TOKEN_INVERSE || la == TOKEN_OPEN_INVERSE_CHAIN) {
            state = 99;
            inverseChain();
          }

          state = 102;
          closeBlock();
        case TOKEN_OPEN_INVERSE:
          enterOuterAlt(localctx, 2);
          state = 104;
          openInverse();
          state = 105;
          program();
          state = 107;
          errorHandler.sync(this);
          la = tokenStream.LA(1)!;
          if (la == TOKEN_INVERSE) {
            state = 106;
            inverseAndProgram();
          }

          state = 109;
          closeBlock();
        default:
          throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  OpenBlockContext openBlock() {
    final dynamic localctx = OpenBlockContext(context, state);
    enterRule(localctx, 16, RULE_openBlock);
    int la;
    try {
      int alt;
      enterOuterAlt(localctx, 1);
      state = 113;
      match(TOKEN_OPEN_BLOCK);
      state = 114;
      helperName();
      state = 118;
      errorHandler.sync(this);
      alt = interpreter!.adaptivePredict(tokenStream, 7, context);
      while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
        if (alt == 1) {
          state = 115;
          param();
        }
        state = 120;
        errorHandler.sync(this);
        alt = interpreter!.adaptivePredict(tokenStream, 7, context);
      }
      state = 122;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_ID) {
        state = 121;
        hash();
      }

      state = 125;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_OPEN_BLOCK_PARAMS) {
        state = 124;
        blockParams();
      }

      state = 127;
      match(TOKEN_CLOSE);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  OpenInverseContext openInverse() {
    final dynamic localctx = OpenInverseContext(context, state);
    enterRule(localctx, 18, RULE_openInverse);
    int la;
    try {
      int alt;
      enterOuterAlt(localctx, 1);
      state = 129;
      match(TOKEN_OPEN_INVERSE);
      state = 130;
      helperName();
      state = 134;
      errorHandler.sync(this);
      alt = interpreter!.adaptivePredict(tokenStream, 10, context);
      while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
        if (alt == 1) {
          state = 131;
          param();
        }
        state = 136;
        errorHandler.sync(this);
        alt = interpreter!.adaptivePredict(tokenStream, 10, context);
      }
      state = 138;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_ID) {
        state = 137;
        hash();
      }

      state = 141;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_OPEN_BLOCK_PARAMS) {
        state = 140;
        blockParams();
      }

      state = 143;
      match(TOKEN_CLOSE);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  OpenInverseChainContext openInverseChain() {
    final dynamic localctx = OpenInverseChainContext(context, state);
    enterRule(localctx, 20, RULE_openInverseChain);
    int la;
    try {
      int alt;
      enterOuterAlt(localctx, 1);
      state = 145;
      match(TOKEN_OPEN_INVERSE_CHAIN);
      state = 146;
      helperName();
      state = 150;
      errorHandler.sync(this);
      alt = interpreter!.adaptivePredict(tokenStream, 13, context);
      while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
        if (alt == 1) {
          state = 147;
          param();
        }
        state = 152;
        errorHandler.sync(this);
        alt = interpreter!.adaptivePredict(tokenStream, 13, context);
      }
      state = 154;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_ID) {
        state = 153;
        hash();
      }

      state = 157;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_OPEN_BLOCK_PARAMS) {
        state = 156;
        blockParams();
      }

      state = 159;
      match(TOKEN_CLOSE);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  InverseAndProgramContext inverseAndProgram() {
    final dynamic localctx = InverseAndProgramContext(context, state);
    enterRule(localctx, 22, RULE_inverseAndProgram);
    try {
      enterOuterAlt(localctx, 1);
      state = 161;
      match(TOKEN_INVERSE);
      state = 162;
      program();
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  InverseChainContext inverseChain() {
    final dynamic localctx = InverseChainContext(context, state);
    enterRule(localctx, 24, RULE_inverseChain);
    int la;
    try {
      state = 170;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
        case TOKEN_OPEN_INVERSE_CHAIN:
          enterOuterAlt(localctx, 1);
          state = 164;
          openInverseChain();
          state = 165;
          program();
          state = 167;
          errorHandler.sync(this);
          la = tokenStream.LA(1)!;
          if (la == TOKEN_INVERSE || la == TOKEN_OPEN_INVERSE_CHAIN) {
            state = 166;
            inverseChain();
          }

        case TOKEN_INVERSE:
          enterOuterAlt(localctx, 2);
          state = 169;
          inverseAndProgram();
        default:
          throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  CloseBlockContext closeBlock() {
    final dynamic localctx = CloseBlockContext(context, state);
    enterRule(localctx, 26, RULE_closeBlock);
    try {
      enterOuterAlt(localctx, 1);
      state = 172;
      match(TOKEN_OPEN_ENDBLOCK);
      state = 173;
      helperName();
      state = 174;
      match(TOKEN_CLOSE);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  MustacheContext mustache() {
    final dynamic localctx = MustacheContext(context, state);
    enterRule(localctx, 28, RULE_mustache);
    int la;
    try {
      int alt;
      state = 202;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
        case TOKEN_OPEN:
          enterOuterAlt(localctx, 1);
          state = 176;
          match(TOKEN_OPEN);
          state = 177;
          helperName();
          state = 181;
          errorHandler.sync(this);
          alt = interpreter!.adaptivePredict(tokenStream, 18, context);
          while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
            if (alt == 1) {
              state = 178;
              param();
            }
            state = 183;
            errorHandler.sync(this);
            alt = interpreter!.adaptivePredict(tokenStream, 18, context);
          }
          state = 185;
          errorHandler.sync(this);
          la = tokenStream.LA(1)!;
          if (la == TOKEN_ID) {
            state = 184;
            hash();
          }

          state = 187;
          match(TOKEN_CLOSE);
        case TOKEN_OPEN_UNESCAPED:
          enterOuterAlt(localctx, 2);
          state = 189;
          match(TOKEN_OPEN_UNESCAPED);
          state = 190;
          helperName();
          state = 194;
          errorHandler.sync(this);
          alt = interpreter!.adaptivePredict(tokenStream, 20, context);
          while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
            if (alt == 1) {
              state = 191;
              param();
            }
            state = 196;
            errorHandler.sync(this);
            alt = interpreter!.adaptivePredict(tokenStream, 20, context);
          }
          state = 198;
          errorHandler.sync(this);
          la = tokenStream.LA(1)!;
          if (la == TOKEN_ID) {
            state = 197;
            hash();
          }

          state = 200;
          match(TOKEN_CLOSE_UNESCAPED);
        default:
          throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  PartialContext partial() {
    final dynamic localctx = PartialContext(context, state);
    enterRule(localctx, 30, RULE_partial);
    int la;
    try {
      int alt;
      enterOuterAlt(localctx, 1);
      state = 204;
      match(TOKEN_OPEN_PARTIAL);
      state = 205;
      partialName();
      state = 209;
      errorHandler.sync(this);
      alt = interpreter!.adaptivePredict(tokenStream, 23, context);
      while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
        if (alt == 1) {
          state = 206;
          param();
        }
        state = 211;
        errorHandler.sync(this);
        alt = interpreter!.adaptivePredict(tokenStream, 23, context);
      }
      state = 213;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_ID) {
        state = 212;
        hash();
      }

      state = 215;
      match(TOKEN_CLOSE);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  PartialBlockContext partialBlock() {
    final dynamic localctx = PartialBlockContext(context, state);
    enterRule(localctx, 32, RULE_partialBlock);
    try {
      enterOuterAlt(localctx, 1);
      state = 217;
      openPartialBlock();
      state = 218;
      program();
      state = 219;
      closeBlock();
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  OpenPartialBlockContext openPartialBlock() {
    final dynamic localctx = OpenPartialBlockContext(context, state);
    enterRule(localctx, 34, RULE_openPartialBlock);
    int la;
    try {
      int alt;
      enterOuterAlt(localctx, 1);
      state = 221;
      match(TOKEN_OPEN_PARTIAL_BLOCK);
      state = 222;
      partialName();
      state = 226;
      errorHandler.sync(this);
      alt = interpreter!.adaptivePredict(tokenStream, 25, context);
      while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
        if (alt == 1) {
          state = 223;
          param();
        }
        state = 228;
        errorHandler.sync(this);
        alt = interpreter!.adaptivePredict(tokenStream, 25, context);
      }
      state = 230;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_ID) {
        state = 229;
        hash();
      }

      state = 232;
      match(TOKEN_CLOSE);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  ParamContext param() {
    final dynamic localctx = ParamContext(context, state);
    enterRule(localctx, 36, RULE_param);
    try {
      state = 236;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
        case TOKEN_STRING:
        case TOKEN_NUMBER:
        case TOKEN_BOOLEAN:
        case TOKEN_UNDEFINED:
        case TOKEN_NULL_LIT:
        case TOKEN_DATA:
        case TOKEN_ID:
          enterOuterAlt(localctx, 1);
          state = 234;
          helperName();
        case TOKEN_OPEN_SEXPR:
          enterOuterAlt(localctx, 2);
          state = 235;
          sexpr();
        default:
          throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  SexprContext sexpr() {
    final dynamic localctx = SexprContext(context, state);
    enterRule(localctx, 38, RULE_sexpr);
    int la;
    try {
      int alt;
      enterOuterAlt(localctx, 1);
      state = 238;
      match(TOKEN_OPEN_SEXPR);
      state = 239;
      helperName();
      state = 243;
      errorHandler.sync(this);
      alt = interpreter!.adaptivePredict(tokenStream, 28, context);
      while (alt != 2 && alt != ATN.INVALID_ALT_NUMBER) {
        if (alt == 1) {
          state = 240;
          param();
        }
        state = 245;
        errorHandler.sync(this);
        alt = interpreter!.adaptivePredict(tokenStream, 28, context);
      }
      state = 247;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      if (la == TOKEN_ID) {
        state = 246;
        hash();
      }

      state = 249;
      match(TOKEN_CLOSE_SEXPR);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  HashContext hash() {
    final dynamic localctx = HashContext(context, state);
    enterRule(localctx, 40, RULE_hash);
    int la;
    try {
      enterOuterAlt(localctx, 1);
      state = 252;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      do {
        state = 251;
        hashSegment();
        state = 254;
        errorHandler.sync(this);
        la = tokenStream.LA(1)!;
      } while (la == TOKEN_ID);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  HashSegmentContext hashSegment() {
    final dynamic localctx = HashSegmentContext(context, state);
    enterRule(localctx, 42, RULE_hashSegment);
    try {
      enterOuterAlt(localctx, 1);
      state = 256;
      match(TOKEN_ID);
      state = 257;
      match(TOKEN_EQUALS);
      state = 258;
      param();
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }

  BlockParamsContext blockParams() {
    final dynamic localctx = BlockParamsContext(context, state);
    enterRule(localctx, 44, RULE_blockParams);
    int la;
    try {
      enterOuterAlt(localctx, 1);
      state = 260;
      match(TOKEN_OPEN_BLOCK_PARAMS);
      state = 262;
      errorHandler.sync(this);
      la = tokenStream.LA(1)!;
      do {
        state = 261;
        match(TOKEN_ID);
        state = 264;
        errorHandler.sync(this);
        la = tokenStream.LA(1)!;
      } while (la == TOKEN_ID);
      state = 266;
      match(TOKEN_CLOSE_BLOCK_PARAMS);
    } on RecognitionException catch (re) {
      localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return localctx;
  }
